--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,16 +8,12 @@ jobs:
       - name: SSH remote commands
         uses: appleboy/ssh-action@v0.1.10
         with:
-          host: ${{ secrets.STAGING_SERVER_IP }}
-          port: ${{ secrets.STAGING_SERVER_PORT }}
-          username: ${{ secrets.STAGING_SERVER_USER }}
-          key: ${{ secrets.STAGING_SERVER_ID_RSA }}
+          host: ${{ secrets.PRE_STAGING_SERVER_IP }}
+          port: ${{ secrets.PRE_STAGING_SERVER_PORT }}
+          username: ${{ secrets.PRE_STAGING_SERVER_USER }}
+          key: ${{ secrets.PRE_STAGING_SERVER_ID_RSA }}
           script: |
-            cd ${{ vars.STAGING_PROJECT_DIRECTORY }}
-            cd node/src
-            git pull
-            cd ../..
-            docker-compose build
-            docker-compose push
-            docker stack deploy -c docker-compose.yml learnit_front
+            echo hello
+            cd python
+            echo hi
       - run: while  ! curl -sI ${{ vars.STAGING_FRONT_BASE_URL }} | grep 200; do sleep 1; done && echo "server is running"
